# pygrad

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  Makefile  README.md
.github/workflows/: test.yml
examples/: README.md  a.out  iris-example.cpp  mnist-example.cpp
include/: CostFunction.h  Layer.h
src/: CostFunction.cpp  DenseLayer.cpp  DenseLayer.h  Initializer.cpp  Initializer.h  Layer.cpp  Layer.h  Makefile  Model.cpp  Model.h  Neuron.cpp  Neuron.h  main.cpp
tests/: DenseLayer_test.cpp  Layer_test.cpp  Model_test.cpp  Neuron_test.cpp
